--- a/web3Auth/package.json
+++ b/web3Auth/package.json
@@ -5,21 +5,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tw": "tailwindcss -i ./input.css -o ./dist/output.css",
+    "tww": "tailwindcss -i ./input.css -o ./dist/output.css --watch"
+    
   },
   "dependencies": {
-    "@web3auth/web3auth": "^0.2.3",
+    "@web3auth/web3auth": "^1.0.1",
     "ethers": "^5.5.3",
-    "moralis": "^1.3.0",
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-moralis": "^1.0.4",
+    "magic-sdk": "^8.1.1",
+    "moralis": "^1.8.0",
+    "next": "12.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.0",
     "web3": "^1.7.0",
     "web3uikit": "^0.1.19"
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "tailwindcss": "^3.1.3"
   }
 }
